objects/ProductSelectionDetail__c.object
<CustomObject>
    <fields>
        <fullName>BHCostShare__c</fullName>
        <description>Sprint - 2: Telehealth</description>
        <inlineHelpText>BH only available w/ MDLive and Doctors on Demand for NASCO. BH only available with MDLive for WGS</inlineHelpText>
        <label>BH Cost Share</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Match Existing BH In-person Cost Share</fullName>
                </value>
                <value>
                    <fullName>No Cost Share</fullName>
                </value>
                <value>
                    <fullName>Match Existing Medical Cost Share (use only if BH in-person is co-pay)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BlueDistinctionPlus__c</fullName>
        <description>Sprint - 2: Blue Distinction Tiering</description>
        <label>% Blue Distinction Plus</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BlueDistinctionTieringName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Blue Distinction Tiering Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BlueDistinction__c</fullName>
        <label>%Blue Distinction</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CCCTier1Desc__c</fullName>
        <label>CCCTier1Desc</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blue Distinction Plus</fullName>
                </value>
                <value>
                    <fullName>Blue Distinction</fullName>
                </value>
                <value>
                    <fullName>Non-Blue Distinction (In-Network)</fullName>
                </value>
                <value>
                    <fullName>Out-of-Network</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCCTier1__c</fullName>
        <label>CCCTier1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CCCTier2Desc__c</fullName>
        <label>CCCTier2Desc</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blue Distinction Plus</fullName>
                </value>
                <value>
                    <fullName>Blue Distinction</fullName>
                </value>
                <value>
                    <fullName>Non-Blue Distinction (In-Network)</fullName>
                </value>
                <value>
                    <fullName>Out-of-Network</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCCTier2__c</fullName>
        <label>CCCTier2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CCCTier3Desc__c</fullName>
        <label>CCCTier3Desc</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blue Distinction Plus</fullName>
                </value>
                <value>
                    <fullName>Blue Distinction</fullName>
                </value>
                <value>
                    <fullName>Non-Blue Distinction (In-Network)</fullName>
                </value>
                <value>
                    <fullName>Out-of-Network</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCCTier3__c</fullName>
        <label>CCCTier3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Client_Billing_Options__c</fullName>
        <label>Client Billing Options</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PPPY (Billing Invoice Monthly)</fullName>
                </value>
                <value>
                    <fullName>Claim Based</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CoinsuranceNOTSubjecttoDeductible__c</fullName>
        <label>%Coinsurance (NOT Subject to Deductible)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Coinsurance_Following_Deductible__c</fullName>
        <label>% Coinsurance (Following Deductible)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copayment__c</fullName>
        <label>$ Copayment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CorrespondingPackageCodeContractCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Corresponding Package Code/Contract Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomBenefit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Custom Benefit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsKiosk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsKiosk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsThereCopayment__c</fullName>
        <description>Sprint - 2: Telehealth</description>
        <label>Is There Copayment?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KioskManagerName__c</fullName>
        <formula>Kiosk_Manager__r.FirstName&amp;&quot; &quot;&amp;Kiosk_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KioskManagerName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kiosk_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Kiosk Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kiosk_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Kiosk City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kiosk_Installation_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Kiosk Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kiosk_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kiosk Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Product Selection Details</relationshipLabel>
        <relationshipName>Kiosks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Kiosk_Removal_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Kiosk Removal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kiosk_State__c</fullName>
        <label>Kiosk State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State_Abbv</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kiosk_Type__c</fullName>
        <label>Kiosk Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Health Hub</fullName>
                </value>
                <value>
                    <fullName>MedStop Console</fullName>
                </value>
                <value>
                    <fullName>MedStop Portable v1</fullName>
                </value>
                <value>
                    <fullName>MedStop Portable v2</fullName>
                </value>
                <value>
                    <fullName>MedSuite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kiosk_Zipcode__c</fullName>
        <label>Kiosk Zipcode</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_IsActiveRider__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This checkbox is used as an identifier for Active and Inactive riders.</description>
        <label>LG_IsActiveRider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LHOBHCostShare__c</fullName>
        <label>LHO/BH Cost Share</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Match Existing BH In-person Cost Share</fullName>
                </value>
                <value>
                    <fullName>No Cost Share</fullName>
                </value>
                <value>
                    <fullName>Match Existing LHOL/Medical Cost Share (use only if BH in-person is co-pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LHOName__c</fullName>
        <displayFormat>LHO-{0000}</displayFormat>
        <label>LHO Name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>LHO_Components__c</fullName>
        <label>LHO Components</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Behavioral Health</fullName>
                </value>
                <value>
                    <fullName>Diabetes Prevention Program</fullName>
                </value>
                <value>
                    <fullName>Healthy Blood Pressure</fullName>
                </value>
                <value>
                    <fullName>Healthy Weight</fullName>
                </value>
                <value>
                    <fullName>Lactation</fullName>
                </value>
                <value>
                    <fullName>LHO Better Sleep</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Onsite Kiosk</fullName>
                </value>
                <value>
                    <fullName>Tobacco Free</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegacyNonParProfessionalPricing__c</fullName>
        <label>Legacy Non-Par Professional Pricing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Custom Percent of Medicare Fee Schedule</fullName>
                </value>
                <value>
                    <fullName>175% of Medicare Fee Schedule for ASO Only (CMSE)</fullName>
                </value>
                <value>
                    <fullName>190% of Medicare Fee Schedule for ASO Only (CMSE)</fullName>
                </value>
                <value>
                    <fullName>270% of Medicare Fee Schedule for ASO Only (CMS6)</fullName>
                </value>
                <value>
                    <fullName>285% of Medicare Fee Schedule for ASO Only (CMS8)</fullName>
                </value>
                <value>
                    <fullName>300% of Medicare Fee Schedule for ASO Only (CMS9)</fullName>
                </value>
                <value>
                    <fullName>315% of Medicare Fee Schedule for ASO Only (CMSA)</fullName>
                </value>
                <value>
                    <fullName>340% of Medicare Fee Schedule for ASO Only (CMSB)</fullName>
                </value>
                <value>
                    <fullName>375% of Medicare Fee Schedule for ASO Only (CMSD)</fullName>
                </value>
                <value>
                    <fullName>Custom Percent of Medicare Fee Schedule; See Comments</fullName>
                </value>
                <value>
                    <fullName>Local ITS Plan Pricing for non-CA states (0023)</fullName>
                </value>
                <value>
                    <fullName>Local CO/NV pricing (0000)</fullName>
                </value>
                <value>
                    <fullName>Local CA pricing, 100% of PB Fee Schedule for ASO or FI (CCS1)</fullName>
                </value>
                <value>
                    <fullName>Local CA pricing, 209% of PB Fee Schedule for ASO or FI (CCS2)</fullName>
                </value>
                <value>
                    <fullName>Local CA pricing, 240% of PB Fee Schedule for ASO or FI (CCS3)</fullName>
                </value>
                <value>
                    <fullName>Local CA pricing, 250% of PB Fee Schedule for ASO or FI (CCS4)</fullName>
                </value>
                <value>
                    <fullName>Local CA pricing, 262% of PB Fee Schedule for ASO or FI (CCS5)</fullName>
                </value>
                <value>
                    <fullName>Local CA pricing, 276% of PB Fee Schedule for ASO or FI (CCS6)</fullName>
                </value>
                <value>
                    <fullName>Local CA pricing, 296% of PB Fee Schedule for ASO or FI (CCS7)</fullName>
                </value>
                <value>
                    <fullName>Local CA pricing, 326% of PB Fee Schedule for ASO or FI (CCS8)</fullName>
                </value>
                <value>
                    <fullName>Custom Local pricing</fullName>
                </value>
                <value>
                    <fullName>Billed Charges</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegacyOONRAPProviders__c</fullName>
        <inlineHelpText>OON Radiologist, Anesthesiologist, Pathologist Providers</inlineHelpText>
        <label>Legacy OON RAP Providers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pay at Billed Charges</fullName>
                </value>
                <value>
                    <fullName>175% of Medicare Fee Schedule for ASO Only (CSME)</fullName>
                </value>
                <value>
                    <fullName>190% of Medicare Fee Schedule for ASO Only (CMSE)</fullName>
                </value>
                <value>
                    <fullName>270% of Medicare Fee Schedule for ASO Only (CMS6)</fullName>
                </value>
                <value>
                    <fullName>285% of Medicare Fee Schedule for ASO Only (CMS8)</fullName>
                </value>
                <value>
                    <fullName>300% of Medicare Fee Schedule for ASO Only (CMS9)</fullName>
                </value>
                <value>
                    <fullName>315% of Medicare Fee Schedule for ASO Only (CMSA)</fullName>
                </value>
                <value>
                    <fullName>340% of Medicare Fee Schedule for ASO Only (CMSB)</fullName>
                </value>
                <value>
                    <fullName>375% of Medicare Fee Schedule for ASO Only (CMSD)</fullName>
                </value>
                <value>
                    <fullName>Custom Percent of Medicare Fee Schedule; See Comments</fullName>
                </value>
                <value>
                    <fullName>Local ITS Plan Pricing for non-CA states (0023)</fullName>
                </value>
                <value>
                    <fullName>Local CO/NV pricing (0000)</fullName>
                </value>
                <value>
                    <fullName>Local CA pricing, 100% of PB Fee Schedule for ASO or FI (CCS1)</fullName>
                </value>
                <value>
                    <fullName>Local CA pricing, 209% of PB Fee Schedule for ASO or FI (CCS2)</fullName>
                </value>
                <value>
                    <fullName>Local CA pricing, 240% of PB Fee Schedule for ASO or FI (CCS3)</fullName>
                </value>
                <value>
                    <fullName>Local CA pricing, 250% of PB Fee Schedule for ASO or FI (CCS4)</fullName>
                </value>
                <value>
                    <fullName>Local CA pricing, 262% of PB Fee Schedule for ASO or FI (CCS5)</fullName>
                </value>
                <value>
                    <fullName>Local CA pricing, 276% of PB Fee Schedule for ASO or FI (CCS6)</fullName>
                </value>
                <value>
                    <fullName>Local CA pricing, 296% of PB Fee Schedule for ASO or FI (CCS7)</fullName>
                </value>
                <value>
                    <fullName>Local CA pricing, 326% of PB Fee Schedule for ASO or FI (CCS8)</fullName>
                </value>
                <value>
                    <fullName>Custom Local pricing</fullName>
                </value>
                <value>
                    <fullName>Billed Charges</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Logged_In_User_Profile__c</fullName>
        <formula>$User.ProfileName__c</formula>
        <label>Logged In User Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoMemberCostShare__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sprint -2: Telehealth</description>
        <label>No Member Cost Share</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NonBlueDistinctionInNetwork__c</fullName>
        <description>Sprint - 2: Blue Distinction Tiering</description>
        <label>% Non-Blue Distinction In-Network</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NonPARProfessionalPricingofMedica__c</fullName>
        <label>Non-PAR Professional Pricing % of Medica</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NonParProfessionalPricing__c</fullName>
        <label>Non-Par Professional Pricing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Local ITS Plan Pricing</fullName>
                </value>
                <value>
                    <fullName>Local CO/NV Pricing</fullName>
                </value>
                <value>
                    <fullName>Billed Charges</fullName>
                </value>
                <value>
                    <fullName>% of Medicare fee schedule</fullName>
                </value>
                <value>
                    <fullName>% of Local plan pricing for ASO or FI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NonParProfessionalPricingofLocal__c</fullName>
        <label>Non-Par Professional Pricing % of Local</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OONRAPProviders__c</fullName>
        <label>OON RAP Providers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Local ITS Plan Pricing</fullName>
                </value>
                <value>
                    <fullName>Local CO/NV Pricing</fullName>
                </value>
                <value>
                    <fullName>Billed Charges</fullName>
                </value>
                <value>
                    <fullName>% of Medicare fee schedule</fullName>
                </value>
                <value>
                    <fullName>% of Local plan pricing for ASO or FI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OONRAPProvidersofLocalplanpricin__c</fullName>
        <label>OON RAP Providers % of Local plan pricin</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OONRAPProvidersofMedicarefee__c</fullName>
        <label>OON RAP Providers % of Medicare fee</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OutofNetwork__c</fullName>
        <description>From Blue Distinction Tiering</description>
        <label>% Out-of-Network</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PackageContractCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Package/Contract Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_QLI_Id__c</fullName>
        <description>This field will store the Parent QLI information.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent_QLI_Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Plans</fullName>
                </value>
                <value>
                    <fullName>CDHP-HIA</fullName>
                </value>
                <value>
                    <fullName>CDHP-HRA</fullName>
                </value>
                <value>
                    <fullName>CDHP-HSA</fullName>
                </value>
                <value>
                    <fullName>EPO</fullName>
                </value>
                <value>
                    <fullName>HDHP</fullName>
                </value>
                <value>
                    <fullName>HMO</fullName>
                </value>
                <value>
                    <fullName>Indemnity</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>PPO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QuoteLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line Item</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Product Selection Details</relationshipLabel>
        <relationshipName>Product_Selection_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Second junction for QuoteLineItem and Rider Association</description>
        <label>Rider</label>
        <referenceTo>LG_Riders__c</referenceTo>
        <relationshipLabel>Product Selection Details</relationshipLabel>
        <relationshipName>Product_Selection_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <description>Used for data load, the CIP, and Open Enrollment processes that need to be maintained in the old Commercial ORG.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Used for data load, the CIP, and Open Enrollment processes that need to be maintained in the old Commercial ORG.</inlineHelpText>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubjecttoDeductibleCoinsurance__c</fullName>
        <description>Sprint - 2: Telehealth</description>
        <label>Subject to Deductible/Coinsurance?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TermDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Term Date</label>
        <type>Date</type>
    </fields>
    <label>Product Selection Detail</label>
    <nameField>
        <displayFormat>PS-{000000}</displayFormat>
        <label>Product Selection Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Selection Details</pluralLabel>
    <recordTypes>
        <fullName>Blue_Distinction</fullName>
        <active>true</active>
        <label>Blue Distinction</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cleveland_Clinic_Concierge</fullName>
        <active>true</active>
        <label>Cleveland Clinic Concierge</label>
    </recordTypes>
    <recordTypes>
        <fullName>LG_Rider_Plan_Assoc</fullName>
        <active>true</active>
        <label>LG_Rider_Plan_Assoc</label>
    </recordTypes>
    <recordTypes>
        <fullName>LHOs</fullName>
        <active>true</active>
        <label>LHOs</label>
    </recordTypes>
    <recordTypes>
        <fullName>NCN</fullName>
        <active>true</active>
        <label>NCN</label>
    </recordTypes>
    <recordTypes>
        <fullName>Telehealth</fullName>
        <active>true</active>
        <label>Telehealth</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>